<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHome"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue1"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNameUser"
                style="@style/Subtitle2Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Subtitle2Medium"
                android:id="@+id/tvYourBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/your_balance"
                app:layout_constraintStart_toStartOf="@+id/tvNameUser"
                app:layout_constraintTop_toBottomOf="@+id/tvNameUser" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tflBalance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvYourBalance"
                app:layout_constraintTop_toBottomOf="@+id/tvYourBalance"
                app:prefixText="Rp ">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Subtitle1Medium"
                    android:id="@+id/edtBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:background="@color/blue1"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    tools:text="50.000.000" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/btnTopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tflBalance">

                <ImageView
                    android:id="@+id/imgTopUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_topup"/>

                <TextView
                    android:id="@+id/tvTopUp"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/topUP"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnTopUp"
                app:layout_constraintTop_toBottomOf="@+id/tflBalance">

                <ImageView
                    android:id="@+id/imgTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_transfer"/>

                <TextView
                    android:id="@+id/tvTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="4dp"
                    android:text="@string/transfer"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                style="@style/Subtitle2Bold"
                android:id="@+id/tvLastNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/last_name"
                app:layout_constraintStart_toEndOf="@+id/tvNameUser"
                app:layout_constraintTop_toTopOf="@+id/tvNameUser" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>